--- a/pom.xml
+++ b/pom.xml
@@ -2,6 +2,8 @@
   xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
                       http://maven.apache.org/xsd/maven-4.0.0.xsd">
+
+  <modelVersion>4.0.0</modelVersion>
   
   <groupId>com.alex</groupId>
   <artifactId>payment-system</artifactId>
@@ -11,6 +13,7 @@
     <springboot.version>2.0.2.RELEASE</springboot.version>
     <lombok.version>1.16.20</lombok.version>
     <sqlite.version>3.21.0</sqlite.version>
+    <hibernate.version>5.3.0.Final</hibernate.version>
   </properties>
 
   <parent>
@@ -29,7 +32,7 @@
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-data-jpa</artifactId>
-      <version>${spring.boot.version}</version>
+      <version>${springboot.version}</version>
     </dependency>
 
     <dependency>
@@ -39,9 +42,9 @@
     </dependency>
 
     <dependency>
-      <groupId>org.xerial</groupId>
-      <artifactId>sqlite-jdbc</artifactId>
-      <version>${sqlite.version}</version>
+      <groupId>com.h2database</groupId>
+      <artifactId>h2</artifactId>
+      <version>1.4.197</version>
     </dependency>
 
     <dependency>
@@ -63,7 +66,7 @@
       <plugin>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-maven-plugin</artifactId>
-        <version>${spring.boot.version}</version>
+        <version>${springboot.version}</version>
       </plugin>
 
       <plugin>
