--- a/pom.xml
+++ b/pom.xml
@@ -59,6 +59,12 @@
       <version>2.8.0</version>
       <scope>compile</scope>
     </dependency>
+
+    <dependency>
+      <groupId>javax.validation</groupId>
+      <artifactId>validation-api</artifactId>
+      <version>2.0.0.Final</version>
+    </dependency>
   </dependencies>
 
   <build>
